# Spyker-Lapland-Robotics

./: README.md
catkin_ws/src/base_controller/: CMakeLists.txt  package.xml
catkin_ws/src/bldc/: CMakeLists.txt  package.xml
catkin_ws/src/bldc/src/: simple_drive.cpp
catkin_ws/src/navigation_example/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_example/src/: make_plan.cpp
catkin_ws/src/robot_setup_tf/: CMakeLists.txt  package.xml
catkin_ws/src/robot_setup_tf/src/: tf_broadcaster.cpp
catkin_ws/src/spyker_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/spyker_navigation/launch/: move_base.launch  navigation.launch  spyker.launch  test.launch
catkin_ws/src/spyker_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
catkin_ws/src/spyker_navigation/rviz/: navigation.rviz  test.rviz
catkin_ws/src/viz_sonar/: CMakeLists.txt  package.xml
catkin_ws/src/viz_sonar/launch/: sonar_rosserial.launch
catkin_ws/src/viz_sonar/rviz/: sonar_rosserial.rviz
catkin_ws/src/zed_sensors/: CMakeLists.txt  package.xml
catkin_ws/src/zed_sensors/src/: camera_sensors.cpp  camera_sensors.cpp.save  camera_sensors_working.cpp
motordriver/Ros_motordrive/: platformio.ini
motordriver/Ros_motordrive/src/: Rc_mode.cpp  Rc_mode.h  Ultrasound.cpp  Ultrasound.h  main.cpp  motorDrives.cpp  motorDrives.h  setup.h
